# Starlink-Tracker-

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard/: app.py
notes/: 01-architecture.md  02-starlink.md  03-anomalies.md  04-phases.md  05-references.md  06-open-questions.md  07-status.md  08-observer.md  09-live.md  10-cli-reference.md
scripts/: register_scheduled_update.ps1
spacetrack/: __init__.py  cli.py  live.py
spacetrack/anomaly/: __init__.py  decay.py
spacetrack/data/: __init__.py  starlink_seed.tle
spacetrack/observer/: __init__.py  visibility.py
spacetrack/propagate/: __init__.py  sgp4_engine.py
spacetrack/storage/: __init__.py  db.py  queries.py  snapshot.py
spacetrack/tle/: __init__.py  fetcher.py  parser.py
spacetrack/viz/: __init__.py  coastlines.py  globe3d.py  globe_deck.py  groundtrack.py  skyplot.py
tests/: test_decay.py  test_observer.py  test_parser.py  test_propagate.py  test_queries.py  test_storage.py  test_viz.py
