[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacetrack"
version = "0.1.0"
description = "Track the Starlink constellation and detect orbital anomalies (conjunctions, maneuvers, proximity events, decay)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Alex Maldonado" }]
license = { text = "MIT" }
keywords = ["satellite", "starlink", "sgp4", "tle", "space", "cybersecurity"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "sgp4>=2.23",
    "skyfield>=1.49",
    "click>=8.1",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
viz = [
    "plotly>=5.20",
    "mapbox-earcut>=1.0",
]
dashboard = [
    "plotly>=5.20",
    "streamlit>=1.32",
    "mapbox-earcut>=1.0",
]

[project.scripts]
spacetrack = "spacetrack.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spacetrack*"]

[tool.setuptools.package-data]
"spacetrack.viz" = ["assets/*.geojson", "assets/*.json"]
"spacetrack.data" = ["*.tle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
